--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,14 @@
 }
 
 .header {
+  position: relative;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
 }
 
 .logo {
@@ -21,7 +23,7 @@
 
 .logo_place_header {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 30px;
   left: 64px;
 }
@@ -29,7 +31,7 @@
 .header__title {
   width: 730px;
   margin-left: 64px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__title-text {
@@ -42,7 +44,7 @@
 .header__subtitle {
   width: 388px;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   bottom: 30px;
   left: 64px;
 }
@@ -61,7 +63,7 @@
 
 .header__main-illustration {
   position: absolute;
-  z-index: 0;
+  z-index: 1;
   right: 0;
   bottom: 0;
   width: 765px;
@@ -75,7 +77,7 @@
   position: absolute;
   right: 0;
   top: 64px;
-  z-index: -1;
+  z-index: 0;
   width: 568px;
   height: 568px;
   background-color: #2f80ed;
@@ -84,8 +86,8 @@
 .description {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  box-sizing: border-box;
+  padding: 100px 0 0 0;
 }
 
 .two-columns {
@@ -125,10 +127,11 @@
 }
 
 .digits {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px 0 auto;
+  padding: 100px 0;
 }
 
 .section-title {
@@ -184,11 +187,12 @@
   position: relative;
   height: 890px;
   padding-top: 100px;
+  background-color: #f2f2f2;
 }
 
 .feynman__background {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   bottom: 0;
   left: 0;
   width: 867px;
@@ -196,20 +200,24 @@
 }
 
 .feynman__title {
+  position: relative;
   margin: 0 auto 70px;
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
   text-align: center;
+  z-index: 1;
 }
 
 .feynman__subtitle {
+  position: relative;
   margin: 0 auto;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   text-align: center;
+  z-index: 1;
 }
 
 .feynman__link {
@@ -221,6 +229,35 @@
   font-weight: normal;
   right: 48px;
   bottom: 50%;
+  z-index: 1;
+}
+
+.kaufman {
+  position: relative;
+  overflow: hidden;
+  background-color: #1f1f1f;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 90px 0;
+}
+
+.section-title_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  position: relative;
+  z-index: 1;
 }
 
 .table__cell_theme_dark {
@@ -228,4 +265,13 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
 }
