--- a/styles/style.css
+++ b/styles/style.css
@@ -276,6 +276,9 @@
   right: -210px;
   width: 877px;
   height: 877px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-color: #1f1f1f;
+  background-size: cover;
 }
 
 .footer {
@@ -290,6 +293,7 @@
 .footer__columns {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   width: 90%;
 }
 
