--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -5,7 +5,7 @@
   bottom: 0;
   width: 765px;
   height: 608px;
-  background-image: url("../../../images/two_again.png");
+  background-image: url("/images/two_again.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
