--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -4,5 +4,5 @@
   top: 30px;
   left: 64px;
   background-color: #f2f2f2;
-  background-image: url("../../../images/logo_place_header.svg");
+  background-image: url("/images/logo_place_header.svg");
 }
