--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -1,9 +1,7 @@
-.techniques {
-  box-sizing: border-box;
+.resources {
   padding-top: 100px;
+  padding-bottom: 217px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80%;
-  margin: 0 auto;
 }
