--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,3 +1,5 @@
+@import url("../../rotation/rotation.css");
+
 .header__square-pic {
   position: absolute;
   right: 0;
@@ -6,4 +8,5 @@
   width: 568px;
   height: 568px;
   background-color: #2f80ed;
+  animation: rotation 20s linear infinite;
 }
