--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,9 +1,7 @@
-.techniques {
+.video {
   box-sizing: border-box;
   padding-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80%;
-  margin: 0 auto;
 }
