--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -7,7 +7,7 @@
   right: -210px;
   width: 877px;
   height: 877px;
-  background-image: url("/images/kaufman-triangle.svg");
+  background-image: url("../../../images/kaufman-triangle.svg");
   background-color: #1f1f1f;
   background-size: cover;
   animation: rotation 20s linear infinite;
